--- a/style.css
+++ b/style.css
@@ -33,6 +33,57 @@ nav {
   color: rgb(57, 42, 35);
   background-color: #ffffff76;
 }
+
+/* For Home section */
+.home {
+  display: flex;
+  justify-content: space-between;
+}
+.home-heading {
+  padding: 150px 70px;
+  font-size: large;
+}
+.home-heading h1 {
+  font-size: 45px;
+}
+h1 em {
+  font-size: 60px;
+  font-style: normal;
+}
+.home-heading p {
+  padding: 5px 0;
+}
+.home-heading button {
+  color: rgb(75, 38, 20);
+  border: 1px solid rgb(75, 38, 20);
+  background-color: transparent;
+  padding: 10px;
+  margin-left: 60px;
+  margin-top: 15px;
+  border-radius: 5px;
+}
+.offer {
+  padding-top: -90px;
+  /* padding-left: -100px; */
+}
+.offer img {
+  margin-top: -85px;
+  width: 400px;
+  margin-left: -90px;
+}
+.home-image {
+  position: relative;
+  animation: move 1s both;
+}
+@keyframes move {
+  from {
+    right: 0px;
+  }
+  to {
+    right: 100px;
+  }
+}
+
 /* for ipad screen  */
 @media (max-width: 1000px) {
   #logo img {
@@ -71,10 +122,6 @@ nav {
     width: 30px;
     padding-left: 10spx;
   }
-  /* .ancor-tag a {
-    padding-right: 10px;
-    margin-top: -30px; */
-
   .ancor-tag {
     margin-top: -30px;
   }
