--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ h1 em {
 }
 .offer {
   padding-top: -90px;
-  /* padding-left: -100px; */
 }
 .offer img {
   margin-top: -85px;
@@ -84,6 +83,38 @@ h1 em {
   }
 }
 
+/* coffee */
+.coffee-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 40px;
+  padding: ;
+}
+.coffee-container .coffee-cup {
+  padding: 10px;
+  height: 200px;
+  border-radius: 10px;
+  text-align: center;
+  margin-bottom: 50px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.265), rgba(0, 0, 0, 0.265)),
+    url(./images/back4.jpg);
+  background-size: cover;
+  color: white;
+}
+.coffee-cup img {
+  width: 150px;
+  height: 130px;
+  position: relative;
+  top: -40px;
+  border-radius: 50px;
+}
+.coffee-cup h2 {
+  margin-top: -15px;
+}
+.coffee-cup p {
+  font-size: 13px;
+  padding: 5px;
+}
 /* for ipad screen  */
 @media (max-width: 1000px) {
   #logo img {
@@ -92,13 +123,42 @@ h1 em {
     padding-left: 30px;
   }
   .ancor-tag {
-    padding-right: 50px;
+    padding-right: 5px;
   }
   .ancor-tag a {
     padding: 10px 10px;
   }
+
+  .home-heading {
+    padding: 150px 50px;
+  }
+  .home-heading h1 {
+    font-size: 35px;
+  }
+  .home-heading button {
+    padding: 8px;
+    margin-top: 8px;
+  }
+  .offer {
+    margin-top: 35px;
+    margin-left: 10px;
+  }
+  .offer img {
+    width: 300px;
+  }
+  .offer-image img {
+    width: 300px;
+  }
+  @keyframes move {
+    from {
+      right: 0px;
+    }
+    t0 {
+      right: 50px;
+    }
+  }
 }
-@media (max-width: 700px) {
+@media (max-width: 780px) {
   #logo img {
     width: 60px;
     height: 60px;
@@ -107,26 +167,114 @@ h1 em {
     font-size: 2.7vh;
     padding: 5px;
   }
+  /* home section  */
+  .home-heading {
+    padding: 100px 20px;
+  }
+  .home-heading h1 {
+    font-size: 25px;
+  }
+  h1 em {
+    font-size: 40px;
+  }
+  .home-heading img {
+    width: 15px;
+    padding: 5px;
+  }
+  .home-heading p {
+    font-size: small;
+  }
+  .home-heading button {
+    padding: 5px;
+  }
+  .offer {
+    margin-top: 20px;
+    margin-left: 10px;
+  }
+  .offer img {
+    width: 300px;
+  }
+  .home-image {
+    width: 300px;
+  }
+  @keyframes move {
+    from {
+      right: 0px;
+    }
+    t0 {
+      right: 50px;
+    }
+  }
 }
+/* for mobile size */
 @media (max-width: 450px) {
   body {
     background-image: url(./images/background-image.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: right bottom;
   }
   #logo {
-    margin-top: -15px;
+    margin-top: -10px;
   }
   #logo img {
-    height: 50px;
-    width: 30px;
-    padding-left: 10spx;
+    height: 60px;
+    width: 40px;
+    padding-left: 20px;
   }
   .ancor-tag {
     margin-top: -30px;
+    margin-right: 10px;
   }
   .ancor-tag a {
-    padding: -5px 5px;
+    padding: 5px 10px;
     font-size: 1.6vh;
+  }
+  /* home section  */
+  .home-heading {
+    padding: 30px 20px;
+    margin-top: -30px;
+  }
+  .home-heading h1 {
+    font-size: 3vh;
+  }
+  h1 em {
+    font-size: 4vh;
+  }
+  .home-heading img {
+    width: 10px;
+    padding: 2px;
+    margin: 8px 0px;
+    margin-bottom: 0px;
+  }
+  .home-heading p {
+    font-size: 1.3;
+  }
+  .home-heading button {
+    padding: 2px;
+    margin-left: 5px;
+    font-size: 1.3vh;
+  }
+  .offer {
+    margin-top: -40px;
+  }
+  .offer img {
+    width: 140px;
+    margin-left: -30px;
+  }
+  .home-image img {
+    width: 130px;
+    height: 170px;
+    margin-right: -20px;
+    margin-top: -50px;
+    padding-left: 80px;
+  }
+  @keyframes move {
+    from {
+      right: 0px;
+    }
+    t0 {
+      right: 5%;
+    }
   }
 }
